--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -12,12 +12,17 @@
     "lint": "eslint src/* src/**/*"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@types/react": "^16.8.0",
-    "graphql-serve": "0.14.0-alpha11",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "graphql": "^14.3.1",
+    "graphql-serve": "^0.11.2",
     "graphql-tag": "^2.10.1",
     "offix-cache": "0.15.5",
     "offix-client-boost": "0.15.5",
-    "offix-datastore": "^0.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.8.0",
     "react-offix-hooks": "0.15.5",
