--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,50 +1,49 @@
 {
-  "name": "offix-react-example",
-  "version": "0.15.5",
-  "main": "index.js",
-  "license": "Apache-2.0",
+  "name": "react-offix",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "parcel serve index.html",
-    "watch": "parcel watch index.html",
-    "build": "parcel build index.html",
-    "serve": "gqls serve model --port=4000",
-    "lint": "eslint src/* src/**/*"
-  },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@types/react": "^16.8.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.4",
-    "apollo-link-http": "^1.5.16",
-    "apollo-link-ws": "^1.0.19",
-    "graphql": "^14.3.1",
-    "graphql-serve": "^0.11.2",
-    "graphql-tag": "^2.10.1",
-    "offix-cache": "0.15.5",
-    "offix-client-boost": "0.15.5",
-    "react": "^16.13.0",
-    "react-dom": "^16.8.0",
-    "react-offix-hooks": "0.15.5",
-    "spectre.css": "^0.5.8",
-    "subscriptions-transport-ws": "^0.9.16"
+    "@ant-design/icons": "^4.2.1",
+    "@apollo/react-hooks": "^3.1.5",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "antd": "^4.4.1",
+    "graphql.macro": "^1.4.2",
+    "offix-client": "^0.15.5",
+    "offix-client-boost": "^0.15.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-offix-hooks": "^0.15.5",
+    "react-scripts": "3.4.1",
+    "typescript": "~3.7.2",
+    "uniforms": "3.0.0-alpha.5",
+    "uniforms-antd": "3.0.0-alpha.5",
+    "uniforms-bridge-graphql": "3.0.0-alpha.5"
   },
-  "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "parcel-bundler": "^1.12.4"
+  "scripts": {
+    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "alias": {
-    "react": "react",
-    "local_modules": "../../node_modules"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
