--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "graphql-tag": "2.10.4",
     "subscriptions-transport-ws": "0.9.17",
+    "tiny-invariant": "^1.1.0",
     "urql": "1.9.8",
     "uuid": "8.2.0",
     "wonka": "4.0.14",
