--- a/packages/offix-datastore/package.json
+++ b/packages/offix-datastore/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/traverse": "^0.6.32",
     "@types/uuid": "8.0.0",
+    "@types/websql": "^0.0.27",
     "apollo-server": "2.16.1",
     "debug": "4.1.1",
     "fake-indexeddb": "3.1.2",
@@ -54,6 +55,7 @@
     "traverse": "^0.6.6",
     "urql": "1.9.8",
     "uuid": "8.3.0",
+    "websql": "^1.0.0",
     "wonka": "4.0.14",
     "zen-observable": "0.8.15"
   }
