--- a/packages/datastore/datastore/package.json
+++ b/packages/datastore/datastore/package.json
@@ -21,7 +21,7 @@
     "size:why": "size-limit --why"
   },
   "peerDependencies": {
-    "react": "16.13.1"
+    "react": "^16.3.1"
   },
   "peerDependenciesMeta": {
     "react": {
@@ -32,17 +32,15 @@
     "@size-limit/preset-small-lib": "4.5.6",
     "@types/jest": "25.2.3",
     "@types/json-schema": "7.0.5",
-    "@types/uuid": "8.3.0",
     "@types/react-dom": "16.9.8",
     "@types/traverse": "0.6.32",
+    "@types/uuid": "8.3.0",
     "@types/websql": "0.0.27",
     "apollo-server": "2.16.1",
     "debug": "4.1.1",
     "fake-indexeddb": "3.1.2",
     "isomorphic-unfetch": "3.0.0",
     "jest": "26.3.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
     "size-limit": "4.5.6",
     "supports-color": "7.1.0",
     "ts-jest": "26.2.0",
@@ -52,8 +50,8 @@
     "graphql-tag": "2.11.0",
     "subscriptions-transport-ws": "0.9.17",
     "tiny-invariant": "1.1.0",
-    "urql": "1.10.0",
     "traverse": "0.6.6",
+    "urql": "1.10.0",
     "uuid": "8.3.0",
     "websql": "1.0.0",
     "wonka": "4.0.14",
