--- a/packages/datastore/datastore/package.json
+++ b/packages/datastore/datastore/package.json
@@ -41,6 +41,7 @@
     "fake-indexeddb": "3.1.2",
     "isomorphic-unfetch": "3.0.0",
     "jest": "26.3.0",
+    "react": "^16.13.1",
     "size-limit": "4.5.6",
     "supports-color": "7.1.0",
     "ts-jest": "26.2.0",
