--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -14,12 +14,9 @@
     "@types/react-dom": "^16.9.0",
     "antd": "^4.4.1",
     "graphql.macro": "^1.4.2",
-    "offix-client": "^0.15.5",
-    "offix-client-boost": "^0.15.5",
     "offix-datastore": "0.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-offix-hooks": "^0.15.5",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2",
     "uniforms": "3.0.0-alpha.5",
@@ -33,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "linkdatastore": "cd ../../packages/offix-datastore && npm link . && cd - && npm link offix-datastore"
+    "linkdatastore": "cd ../../packages/offix-datastore && yarn link . && cd - && yarn link offix-datastore"
   },
   "eslintConfig": {
     "extends": "react-app"
