--- a/packages/datastore/datastore/tsconfig.json
+++ b/packages/datastore/datastore/tsconfig.json
@@ -5,6 +5,7 @@
   ],
   "compilerOptions": {
     "esModuleInterop": true,
+    "sourceMap": true,
     "outDir": "./dist/",
     "declarationDir": "./types",
     "lib": [
