--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -49,7 +49,7 @@
   },
   "devDependencies": {
     "graphback-cli": "0.14.0",
-    "graphql-serve": "0.15.1",
+    "graphql-serve": "0.16.0-alpha4",
     "offix-datasync-client-plugin": "~0.1.2"
   }
 }
