--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -30,7 +30,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "linkdatastore": "cd ../../packages/offix-datastore && yarn link . && cd - && yarn link offix-datastore"
+    "linkdatastore": "cd ../../packages/datastore/datastore && yarn link && cd - && yarn link offix-datastore && rm -Rf ./node_modules/react && && rm -Rf ./node_modules/react-dom"
   },
   "eslintConfig": {
     "extends": "react-app"
