--- a/packages/datastore/datastore-codegen/package.json
+++ b/packages/datastore/datastore-codegen/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "debug": "yarn build&&node dist/index generate --schema tests/mock.graphql --outputPath output/",
     "test": "yarn build&&jest",
     "lint-fix": "eslint \"./src/*\" --fix"
   },
