--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "startServer": "gqlserve serve --datasync --port=5400 ./src/model/runtime.graphql",
+    "startServer": "gqlserve serve --datasync --conflict=clientSideWins --port=5400 ./src/model/runtime.graphql",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "graphback-cli": "0.14.0",
-    "graphql-serve": "0.16.0-alpha4",
+    "graphback-cli": "0.16.0-beta1",
+    "graphql-serve": "0.16.0-beta1",
     "offix-datasync-client-plugin": "~0.1.2"
   }
 }
