--- a/packages/datastore/datastore-codegen/package.json
+++ b/packages/datastore/datastore-codegen/package.json
@@ -15,6 +15,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/bson": "^4.0.2",
     "@types/jest": "26.0.10",
     "@types/yargs": "15.0.5",
     "jest": "26.4.1",
@@ -23,7 +24,7 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
-    "@graphback/core": "0.15.1",
+    "@graphback/core": "0.16.0-beta1",
     "graphql-metadata": "0.7.4",
     "yargs": "15.4.1"
   }
