--- a/examples/react-native-datastore/package.json
+++ b/examples/react-native-datastore/package.json
@@ -13,7 +13,8 @@
     "@react-native-community/netinfo": "^5.9.6",
     "offix-datastore": "^0.1.2",
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "traverse": "^0.6.6"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
