--- a/packages/datastore/datastore/package.json
+++ b/packages/datastore/datastore/package.json
@@ -56,6 +56,6 @@
     "uuid": "8.3.0",
     "websql": "1.0.0",
     "wonka": "4.0.14",
-    "zen-observable": "0.8.15"
+    "zen-observable": "^0.8.15"
   }
 }
