--- a/packages/datastore/cli/package.json
+++ b/packages/datastore/cli/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "tsc",
-    "debug": "yarn build&&node dist/index generate --schema tests/mock.graphql --outputPath output/",
+    "debug": "yarn build&&node dist/index generate",
     "test": "yarn build&&jest",
     "lint-fix": "eslint \"./src/*\" --fix"
   },
