--- a/packages/datastore/cli/package.json
+++ b/packages/datastore/cli/package.json
@@ -31,6 +31,9 @@
   },
   "dependencies": {
     "@graphback/core": "0.16.0-beta1",
+    "@graphql-tools/load-files": "^6.0.18",
+    "@graphql-tools/merge": "^6.0.18",
+    "graphql": "^15.3.0",
     "graphql-metadata": "0.7.6",
     "yargs": "15.4.1"
   }
