--- a/examples/react-datastore/package.json
+++ b/examples/react-datastore/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
     "@apollo/react-hooks": "^3.1.5",
+    "@capacitor/android": "2.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -50,8 +51,10 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^2.4.0",
+    "@capacitor/core": "^2.4.0",
+    "@offix/cli": "0.2.1",
     "graphback-cli": "0.16.0-beta1",
-    "graphql-serve": "0.16.0-beta1",
-    "@offix/cli": "0.2.1"
+    "graphql-serve": "0.16.0-beta1"
   }
 }
