--- a/packages/datastore/cli/package.json
+++ b/packages/datastore/cli/package.json
@@ -24,6 +24,7 @@
     "@types/bson": "4.0.3",
     "@types/jest": "26.0.15",
     "@types/yargs": "15.0.10",
+    "endent": "^2.0.1",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
     "ts-jest": "26.4.4",
