--- a/packages/datastore/cli/package.json
+++ b/packages/datastore/cli/package.json
@@ -27,6 +27,7 @@
     "endent": "^2.0.1",
     "jest": "26.6.3",
     "rimraf": "3.0.2",
+    "safe-eval": "^0.4.1",
     "ts-jest": "26.4.4",
     "typescript": "3.9.7"
   },
